CSS <main> width changed

--- a/summary_en.html
+++ b/summary_en.html
@@ -12,7 +12,8 @@
 
         main {
             background-color: white;
-            margin: 1em 20em;
+            width: 850px;
+            margin: auto;
             padding: 0.2em 0;
         }
 
