add summary_en on branch test

--- a/summary_en.html
+++ b/summary_en.html
@@ -156,6 +156,13 @@
             <p>Hobbies:<br>
                 Sports, science fiction, theater.</p>
         </div>
+        <div>
+            My beetroot homeworks:
+            <ul>
+                <li><a href="https://vgaimanovskyi.github.io/02-1-Homework/index.html">shopping list</a></li>
+                <li><a href="https://vgaimanovskyi.github.io/02-2-Homework/index.html">links</a></li>
+            </ul>
+        </div>
     </main>
 </body>
 
