add h2 on branch test2

--- a/summary_en.html
+++ b/summary_en.html
@@ -157,7 +157,7 @@
                 Sports, science fiction, theater.</p>
         </div>
         <div>
-            My beetroot homeworks:
+            <h2>My beetroot homeworks:</h2>
             <ul>
                 <li><a href="https://vgaimanovskyi.github.io/02-1-Homework/index.html">shopping list</a></li>
                 <li><a href="https://vgaimanovskyi.github.io/02-2-Homework/index.html">links</a></li>
